<resources>
    <string name="app_name">Kvizovi</string>
    <string name="dodaj_ikonu">Dodaj ikonu</string>
    <string name="spasi_kategoriju">Spasi Kategoriju</string>
    <string name="ikona">Ikona</string>
    <string name="naziv_kategorije">Naziv Kategorije</string>
    <string name="pitanja_u_kvizu">Pitanja u kvizu</string>
    <string name="moguca_pitanja">Moguca pitanja</string>
    <string name="dodaj_kviz">Dodaj Kviz</string>
    <string name="odgovori">Odgovori</string>
    <string name="dodaj">Dodaj</string>
    <string name="dodaj_tacan">Dodaj tacan</string>
    <string name="naziv_kviza">Naziv kviza:</string>
    <string name="broj_tacnih_odgovora">Broj tacnih odgovora:</string>
    <string name="preostalo_pitanja">Preostalo pitanja:</string>
    <string name="procenat_tacnih_odgovora">Procenat tacnih odgovora:</string>
    <string name="zavrsi_kviz">zavrsi kviz</string>
    <string name="lista_kategorija">Lista Kategorija:</string>
    <string name="rang_lista_odabranog_kviza">Rang lista odabranog kviza:</string>
</resources>
