<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etNaziv"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/naziv_kategorije"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etIkona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNaziv"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/ikona"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnDodajKategoriju"
        android:layout_width="400dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etIkona"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/spasi_kategoriju" />

    <Button
        android:id="@+id/btnDodajIkonu"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNaziv"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_toEndOf="@+id/etIkona"
        android:text="@string/dodaj_ikonu" />
</RelativeLayout>