<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:textColor="@android:color/holo_blue_light"
        android:layout_height="41dp"
        android:textAlignment="center"
        android:text="@string/naziv_kviza" />

    <TextView
        android:id="@+id/infNazivKviza"
        android:background="@drawable/border_text_area"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="41dp" />

    <TextView
        android:id="@+id/textView7"
        android:textColor="@android:color/holo_blue_light"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/broj_tacnih_odgovora" />

    <TextView
        android:id="@+id/infBrojTacnihPitanja"
        android:background="@drawable/border_text_area"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="41dp" />

    <TextView
        android:id="@+id/textView9"
        android:textColor="@android:color/holo_blue_light"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/preostalo_pitanja" />

    <TextView
        android:id="@+id/infBrojPreostalihPitanja"
        android:background="@drawable/border_text_area"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="41dp" />

    <TextView
        android:id="@+id/textView"
        android:textColor="@android:color/holo_blue_light"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/procenat_tacnih_odgovora" />

    <TextView
        android:id="@+id/infProcenatTacni"
        android:background="@drawable/border_text_area"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="41dp" />

    <Button
        android:id="@+id/btnKraj"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zavrsi_kviz" />
</LinearLayout>
    </ScrollView>
