<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/etNaziv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="45dp"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/tvOdgovori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNaziv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@android:color/holo_green_dark"
        android:text="@string/odgovori" />

    <ListView
        android:id="@+id/lvOdgovori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOdgovori"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp" />


    <EditText
        android:id="@+id/etOdgovor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvOdgovori"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnDodajOdgovor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etOdgovor"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_border"
        android:text="@string/dodaj"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/btnDodajTacan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDodajOdgovor"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_border"
        android:text="@string/dodaj_tacan"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@android:color/holo_green_dark" />

    <Button
        android:id="@+id/btnDodajPitanje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDodajTacan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/dodaj"
        android:textColor="@android:color/white" />


</RelativeLayout>